--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
               <span class="icon"><i class="fas fa-file-pdf"></i></span>
               <span>Paper</span>
             </a>
-            <a href="#" class="button is-dark is-rounded is-medium">
-              <span class="icon"><i class="fab fa-arxiv"></i></span>
+            <a href="https://arxiv.org/abs/2509.06950" class="button is-dark is-rounded is-medium">
               <span>arXiv</span>
             </a>
           </div>
