--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <h1 class="title is-1">Scaling Transformer-Based Novel View Synthesis with Token Disentanglement and Synthetic Data</h1>
           <h2 class="subtitle is-3">ICCV 2025</h2>
           <div class="author-row">
-            <div class="author-col"><a href="#" class="author-text">Nithin Gopalakrishnan Nair¹</a></div>
+            <div class="author-col"><a href="#" class="author-text">Nithin Gopalakrishnan Nair¹*</a></div>
             <div class="author-col"><a href="#" class="author-text">Srinivas Kaza²*</a></div>
             <div class="author-col"><a href="#" class="author-text">Xuan Luo²</a></div>
             <div class="author-col"><a href="#" class="author-text">Vishal M. Patel¹</a></div>
